@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020111230"
-#define public MagickPackageReleaseDate "snapshot-20111230"
+#define public MagickPackageVersionAddendum ".020120101"
+#define public MagickPackageReleaseDate "snapshot-20120101"
